fixed navbar cutoff and styled some font sizes

--- a/CSS/frontpage.css
+++ b/CSS/frontpage.css
@@ -77,3 +77,25 @@
 h3 {
     font-size: 25px;
 }
+
+.list-group-item {
+    border-bottom: 0;
+    border-top: 0;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: bold;
+}
+
+a {
+    color: #242e30;
+    font-size: 12px;
+    line-height: 16px;
+}
